--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -3,22 +3,22 @@ abstract: 'Mark scalars as pure booleans'
 author:
   - 'Cliff Stanford <cpan@may.be>'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.9, CPAN::Meta::Converter version 2.131560'
+generated_by: 'ExtUtils::MakeMaker version 6.96, CPAN::Meta::Converter version 2.140640'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Attribute-Boolean
 no_index:
   directory:
     - t
     - inc
 requires:
-  Attribute::Handlers: 0
-  Variable::Magic: 0
-  perl: 0
-version: v1.0.4
+  Attribute::Handlers: '0'
+  Variable::Magic: '0'
+  perl: '5.014000'
+version: v1.0.6
